--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -39,6 +39,8 @@
         </div>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="horasExtras.js"></script>
+        <script src="formatarMonetario.js"></script>
         <script src="app.js"></script>
 </body>
 
